--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kms-interface-idl (3.0.6-dev) UNRELEASED; urgency=low
+ktool-rom-processor (3.0.6-dev) UNRELEASED; urgency=low
 
   * Initial release.
 
