--- a/source/Developer_and_Programmer_Guide.mediawiki
+++ b/source/Developer_and_Programmer_Guide.mediawiki
@@ -1,4 +1,4 @@
-= Introduction = 
+= Introduction =
 The ''Stream Oriented GE Kurento'' is a multimedia platform helping developers to add multimedia capabilities to their applications. The core element is ''Kurento Media Server'' (''KMS'') a  [http://gstreamer.freedesktop.org/ ''Gstreamer''] based multimedia engine that provides following features: 
 
 * Networked streaming protocols, including ''HTTP'' working as client and server, ''RTP'' and ''WebRTC''.
@@ -29,8 +29,7 @@ This section is intended to provide the very basic steps required to integrate t
 * '''''Install and configure KMS''''': This piece of software is the actual engine providing media processing and delivery.
 
 * '''''Install and configure JBoss 7 Application Server''''': This is a ''JEE'' container that hosts the server side of applications. Other ''Java'' enterprise servers can be used, although no support from ''Kurento'' will be provided. This server will also be called ''Kurento Application Server'' (''KAS'') through the document.
-
-[[StreamOriented_-_Installation_and_Administration_Guide|''Kurento's'' administration guide]] provides detailed information on installation and setup of above components.
+The [[StreamOriented_-_Installation_and_Administration_Guide|''StreamOriented - Installation and Administration Guide]] provides detailed information on installation and setup of above components.
 
 === Create your first application ===
 ==== Server side of your first application ====
@@ -46,7 +45,7 @@ The ''Stream Oriented GE Kurento'' server SDK is a ''Java'' library known as ''K
     <modelVersion>4.0.0</modelVersion>
     <groupId>my.organization</groupId>
     <artifactId>my-kurento-demo</artifactId>
-    <version>1.0.0 </version>
+    <version>1.0.0</version>
     <packaging>war</packaging>
 
 </project>
@@ -59,7 +58,7 @@ The ''Stream Oriented GE Kurento'' server SDK is a ''Java'' library known as ''K
     <dependency>
         <groupId>com.kurento.kmf</groupId>
         <artifactId>kmf-content-api</artifactId>
-        <version>1.0.0</version>
+        <version>3.0.5</version>
     </dependency>
     ...
 </dependencies>
@@ -72,7 +71,7 @@ The ''Stream Oriented GE Kurento'' server SDK is a ''Java'' library known as ''K
 mediaApiConfiguration.serverAddress=127.0.0.1
 
 # Put here the port where KMS management daemon is bound
-# If you did not movify KMS default configuation, let it as 9090
+# If you did not modify KMS default configuration, let it as 9090
 mediaApiConfiguration.serverPort=9090
 
 # Put here the IP address where KAS management handler must listen
@@ -98,12 +97,11 @@ import com.kurento.kmf.content.HttpPlayerHandler;
 import com.kurento.kmf.content.HttpPlayerService;
 import com.kurento.kmf.content.HttpPlayerSession;
 
-@HttpPlayerService(name = "myService", path = "/playerService", useControlProtocol=false)
-public class MyService extends HttpPlayerHandler{
+@HttpPlayerService(path = "/playerService", useControlProtocol=false)
+public class MyService extends HttpPlayerHandler {
 
 	@Override
 	public void onContentRequest(HttpPlayerSession session) throws Exception {
-		
 		session.start("file:///path/to/myvideo.webm ");
 	}
 }
@@ -115,7 +113,7 @@ public class MyService extends HttpPlayerHandler{
 sudo cp mykurento.war $JBOSS_HOME/standalone/deployments
 </pre>
 <pre>
-$JBOSS_HOME/bin/standalone.sh
+sudo /etc/init.d/jboss7 start
 </pre>
 </li>
 </ol>
@@ -264,21 +262,20 @@ Current version of the ''Content API'' only supports ''live'' mode independently
 
 ==== HTTP Recorder Service ====
 
-''HTTP recorder service'' allows applications to inject contents into ''KMS'' through the standard file upload protocol. Method <code>onContentRequest()</code> will be called for each <code>multipart/form</code> ''POST'' request received in the ''service entry point''. The receiver ''HTTP Endpoint'' will search for the first ''content part'' with a supported multimedia format and will feed the media resource specified by the handler (<code>file://myfile</code>).  ''Recorder service'' accepts from client any multimedia format supported by ''Gstreamer'', but transforms content to ''WebM'' or ''MP4'' before writing to file.
+''HTTP recorder service'' allows applications to inject contents into ''KMS'' through the standard file upload protocol. Method <code>onContentRequest()</code> will be called for each <code>multipart/form</code> ''POST'' request received in the ''service entry point''. The receiver ''HTTP Endpoint'' will search for the first ''content part'' with a supported multimedia format and will feed the media resource specified by the handler (<code>file:///myfile</code>).  ''Recorder service'' accepts from client any multimedia format supported by ''Gstreamer'', but transforms content to ''WebM'' or ''MP4'' before writing to file.
 
 <pre>
 import com.kurento.kmf.content.HttpRecorderHandler;
 import com.kurento.kmf.content.HttpRecorderService;
 import com.kurento.kmf.content.HttpRecorderSession;
 
-@HttpRecorderService(name = "myRecorder", path = "/myRecorderService")
-public class MyRecorderService extends HttpRecorderHandler{
+@HttpRecorderService(path = "/myRecorderService")
+public class MyRecorderService extends HttpRecorderHandler {
 
 	@Override
 	public void onContentRequest(HttpRecorderSession contentSession)
 			throws Exception {
-		
-		contentSession.start("file://myfile.webm");
+		contentSession.start("file:///myfile.webm");
 	}
 }
 </pre> 
@@ -300,15 +297,14 @@ import com.kurento.kmf.content.WebRtcContentService;
 import com.kurento.kmf.content.WebRtcContentSession;
 import com.kurento.kmf.media.MediaPipeline;
 import com.kurento.kmf.media.MediaPipelineFactory;
-import com.kurento.kmf.media.PlayerEndPoint;
-import com.kurento.kmf.media.RecorderEndPoint;
+import com.kurento.kmf.media.PlayerEndpoint;
+import com.kurento.kmf.media.RecorderEndpoint;
 
 @WebRtcContentService(path = "/myWebRtcService")
 public class MyWebRtpService extends WebRtcContentHandler{
 
     @Override
     public void onContentRequest(WebRtcContentSession contentSession)throws Exception {
-		
 	contentSession.start(sourceMediaElement, sinkMediaElement);
     }
 }
@@ -378,14 +374,25 @@ public void onSessionTerminated(WebRtcContentSession contentSession, int code, S
 }
 </pre>
 
-The ''content session'' is terminated automatically if the ''Endpoint'' experiences an unrecoverable error not caused by a direct application command. Events like client disconnection, file system access fail, etc. are the main error cause . Method <code>onSessionError()</code> is called with the error code.
+The ''content session'' is terminated automatically if the ''Endpoint'' experiences an unrecoverable error not caused by a direct application command. Events like client disconnection, file system access fail, etc. are the main error cause. Any of these exception can be handled on <code>onUncaughtException()</code>. 
+
+<pre>
+@Override
+public void onUncaughtException(HttpPlayerSession contentSession, Throwable exception) throws Exception {
+	// Execute specific application logic if there is an unrecoverable
+    // error on the media infrastructure. Session is destroyed after 
+    // executing this code
+}
+</pre>
+
+If exceptions are not handled, there will be propagated and method <code>onSessionError()</code> will be called with the error code and description.
 
 <pre>
 @Override
 public void onSessionError(WebRtcContentSession contentSession, int code, String description) throws Exception {
 	// Execute specific application logic if there is an unrecoverable
-        // error on the media infrastructure. Session is destroyed after 
-        // executing this code
+    // error on the media infrastructure. Session is destroyed after 
+    // executing this code
 }
 </pre>
 
@@ -394,7 +401,6 @@ The ''content session'' is able to store and manage application attributes throu
 <pre>
 @Override
 public void onContentRequest(WebRtcContentSession contentSession) throws Exception {
-		
 	contentSession.setAttribute("source", "source.avi");
 	contentSession.setAttribute("sink", "sink.webm");
 	//...
@@ -410,7 +416,7 @@ public void onContentStarted(WebRtcContentSession contentSession) throws Excepti
 
 </pre>
 
-One important feature of the ''content session'' is its capability to share real time information with clients through a bidirectional channel. In order to interchange messages with a browser an  [http://forge.fi-ware.eu/plugins/mediawiki/wiki/fiware/index.php/StreamOriented_Open_API_Specification_(PRELIMINARY)''Open API''] client, like the one implemented by the HTML5 SDK, has to be used.  Messages can be interchanged between the ''service handler'' and the client while the ''content session'' is active. Method <code>publisEvent()</code> is used for this purpose. This capability is quite useful combined with  computer vision filter, as it allows sending events to clients coming from video content analysis (e.g. plate recognized, QR code detected, face detected, etc.)
+One important feature of the ''content session'' is its capability to share real time information with clients through a bidirectional channel. In order to interchange messages with a browser an  [http://forge.fi-ware.eu/plugins/mediawiki/wiki/fiware/index.php/StreamOriented_Open_API_Specification_(PRELIMINARY)''Open API''] client, like the one implemented by the HTML5 SDK, has to be used.  These messages follows a signaling protocol based on '''''JSON-RPC'''''. Messages can be interchanged between the ''service handler'' and the client while the ''content session'' is active. Method <code>publisEvent()</code> is used for this purpose. This capability is quite useful combined with  computer vision filter, as it allows sending events to clients coming from video content analysis (e.g. plate recognized, QR code detected, face detected, etc.)
 
 <pre>
 @Override
@@ -493,7 +499,7 @@ In order to facilitate resource management, the ''content session'' provides a m
 MediaPipelineFactory mpf = contentSession.getMediaPipelineFactory();
 MediaPipeline mp = mpf.create();
 		
-PlayerEndPoint player = mp.createPlayerEndPoint("file:///path/to/myplayed.avi");
+PlayerEndpoint player = mp.createPlayerEndpoint("file:///path/to/myplayed.avi");
 contentSession.releaseOnTerminate(player);
 
 contentSession.start(player);
@@ -516,7 +522,7 @@ public void onContentRequest(WebRtcContentSession contentSession) throws Excepti
 	MediaPipelineFactory mpf = contentSession.getMediaPipelineFactory();
 	MediaPipeline mp = mpf.create();
 	
-	PlayerEndPoint player = mp.newPlayerEndPoint("file:///d").build();
+	PlayerEndpoint player = mp.newPlayerEndpoint("file:///d").build();
 
 	contentSession.start(player);
 }
@@ -539,11 +545,13 @@ Following dependency has to be added to <code>pom.xml</code> in order to use ''K
     <dependency>
         <groupId>com.kurento.kmf</groupId>
         <artifactId>kmf-media-api</artifactId>
-        <version>1.0.0</version>
+        <version>3.0.5</version>
     </dependency>
 …
 </dependencies>
 </pre>
+
+=== MediaPipeline ===
 
 The <code>MediaPipelineFactory</code> is the API entry point. It can be obtained from the ''content session'' when used in conjunction with the ''Content API ''.
 
@@ -609,24 +617,31 @@ public void init() {
 </pre>
 
 ''MediaPipelines'' are the containers where ''KMS MediaElements'' live. ''MediaElements'' within a pipeline can be connected to build services, but they are isolated from the rest of the system. This has to be taken into account when programming applications.
+
+As introduced before, currently there are two kinds of ''MediaElements'', namely ''EndPoints'' and ''Filters''
+
+=== EndPoints ===
+
+''KMS MediaElements'' are created through specific builders, allowing a flexible initialization. Mandatory parameters must be provided in the builder constructor, like the URL in the <code>PlayerEndpoint</code>. Optional parameters are set to defaults unless the application overrides their values.
+
 <pre>
 public void createMediaElements() {
 	MediaPipeline mp = mpf.create();
-	HttpEndPoint httpEndPoint = mp.newHttpEndPoint()
+	HttpEndpoint httpEndpoint = mp.newHttpEndpoint()
 		.withDisconnectionTimeout(1000).withGarbagePeriod(100)
 		.withMediaProfile(MediaProfileSpecType.WEBM).build();
 
-	PlayerEndPoint player = mp.newPlayerEndPoint("file:///myfile.avi")
+	PlayerEndpoint player = mp.newPlayerEndpoint("file:///myfile.avi")
 		.build();
 
-	RecorderEndPoint recorder = mp.newRecorderEndPoint("file:///myfile.mp4")
+	RecorderEndpoint recorder = mp.newRecorderEndpoint("file:///myfile.mp4")
 		.withMediaProfile(MediaProfileSpecType.MP4)
 		.build();
 		
-	RtpEndPoint rtp = mp.newRtpEndPoint()
+	RtpEndpoint rtp = mp.newRtpEndpoint()
 		.build();
 		
-	WebRtcEndPoint webrtc = mp.newWebRtcEndPoint()
+	WebRtcEndpoint webrtc = mp.newWebRtcEndpoint()
 		.build();
 		
 	ZBarFilter zbar = mp.newZBarFilter().build();
@@ -635,18 +650,18 @@ public void createMediaElements() {
 }
 </pre>
 
-''KMS MediaElements'' are created through specific builders, allowing a flexible initialization. Mandatory parameters must be provided in the builder constructor, like the URL in the <code>PlayerEndpoint</code>. Optional parameters are set to defaults unless the application overrides their values. ''MediaElements'' can be connected with method <code>connect()</code> of owner <code>MediaPipeline</code>.
+''MediaElements'' can be connected with method <code>connect()</code> of owner <code>MediaPipeline</code>.
 
 <pre>
 public void connectElements() {
 	MediaPipeline mp = mpf.create();
 
-	HttpEndPoint httpEndPoint = mp.newHttpEndPoint()
+	HttpEndpoint httpEndpoint = mp.newHttpEndpoint()
 		.build();
-	PlayerEndPoint player = mp.newPlayerEndPoint("file:///myfile.avi")
+	PlayerEndpoint player = mp.newPlayerEndpoint("file:///myfile.avi")
 		.build();
 		
-	mp.connect(player, httpEndPoint);
+	mp.connect(player, httpEndpoint);
 		
 }
 </pre>
@@ -657,13 +672,13 @@ Method <code>connect()</code> creates a directional connection between elements 
 public void connectElements() {
 	MediaPipeline mp = mpf.create();
 
-	HttpEndPoint httpEndPoint = mp.newHttpEndPoint()
+	HttpEndpoint httpEndpoint = mp.newHttpEndpoint()
 		.build();
 
-	PlayerEndPoint player = mp.newPlayerEndPoint("file:///myfile.avi")
+	PlayerEndpoint player = mp.newPlayerEndpoint("file:///myfile.avi")
 		.build();
 		
-	mp.connect(player, httpEndPoint);
+	mp.connect(player, httpEndpoint);
 }
 </pre>
  
@@ -673,8 +688,8 @@ In order to create bidirectional connections the application must perform a conn
 public void back2back () {
 	MediaPipeline mp = mpf.create();
 	
-	RtpEndPoint rtpA = mp.newRtpEndPoint().build();
-	RtpEndPoint rtpB = mp.newRtpEndPoint().build();
+	RtpEndpoint rtpA = mp.newRtpEndpoint().build();
+	RtpEndpoint rtpB = mp.newRtpEndpoint().build();
 		
 	mp.connect(rtpA, rtpB);
 	mp.connect(rtpB, rtpA);
@@ -692,10 +707,10 @@ public void buildAsync () {
 		
 	mp = mpf.create();
 				
-	mp.newHttpEndPoint().buildAsync( new Continuation<HttpEndPoint>() {
+	mp.newHttpEndpoint().buildAsync( new Continuation<HttpEndpoint>() {
 
 		@Override
-		public void onSuccess(HttpEndPoint result) {
+		public void onSuccess(HttpEndpoint result) {
 			connectAsync (null, result);
 		}
 		@Override
@@ -705,11 +720,11 @@ public void buildAsync () {
 			
 	});
 		
-	mp.newPlayerEndPoint("file:///myfile.webm").buildAsync( new
-		Continuation<PlayerEndPoint>() {
+	mp.newPlayerEndpoint("file:///myfile.webm").buildAsync( new
+		Continuation<PlayerEndpoint>() {
 
 		@Override
-		public void onSuccess(PlayerEndPoint result) {
+		public void onSuccess(PlayerEndpoint result) {
 			connectAsync (result, null);
 		}
 		@Override
@@ -720,10 +735,10 @@ public void buildAsync () {
 	});
 }
 	
-private HttpEndPoint http;
-private PlayerEndPoint player;
+private HttpEndpoint http;
+private PlayerEndpoint player;
 
-public void connectAsync(PlayerEndPoint player, HttpEndPoint http) {
+public void connectAsync(PlayerEndpoint player, HttpEndpoint http) {
 	if (player != null) {
 		this.player = player;
 	}
@@ -734,6 +749,75 @@ public void connectAsync(PlayerEndPoint player, HttpEndPoint http) {
 		mp.connect(player, http);
 	}
 }
+</pre>
+
+=== Filters ===
+
+Filters perform media processing, computer vision, augmented reality, and so on.
+
+==== JackVaderFilter ====
+
+JackVaderFilter detects faces in a video feed. Those on the right half of the feed are overlaid with a pirate hat, and those on the left half are covered by a Darth Vader helmet. This is an example filter, intended to demonstrate how to integrate computer vision capabilities into the KMS multimedia infrastructure.
+
+<pre>
+JackVaderFilter filter = mediaPipeline.newJackVaderFilter().build();
+</pre>
+
+==== ZBarFilter ====
+
+This filter detects QR and bar codes in a video feed. When a code is found, the filter raises a {@link CodeFoundEvent}. Clients can add a listener to this event using the method.
+
+<pre>
+ZBarFilter zBarFilter = mediaPipeline.newZBarFilter().build();
+zBarFilter.addCodeFoundDataListener(new MediaEventListener<CodeFoundEvent>() {
+	@Override
+	public void onEvent(CodeFoundEvent event) {
+		log.info("Code Found " + event.getValue());
+		// ...
+	});
+}
+</pre>
+
+==== FaceOverlayFilter ====
+
+This type of filter detects faces in a video feed. The face is then overlaid with an image.
+
+<pre>
+MediaPipeline mp = session.getMediaPipelineFactory().create();
+FaceOverlayFilter faceOverlayFilter = mp.newFaceOverlayFilter().build();
+// xoffset%, y offset%, width%, height%
+faceOverlayFilter.setOverlayedImage("/img/masks/mario-wings.png", -0.35F, -1.2F, 1.6F, 1.6F);
+</pre>
+
+==== PointerDetectorFilter and PointerDetectorAdvFilter ====
+
+These type of filters detects pointers in a video feed. The difference is in the way of calibration of such pointers.
+
+<pre>
+PointerDetectorWindowMediaParam start = new PointerDetectorWindowMediaParamBuilder(
+				"start", 100, 100, 280, 380).withImage(
+				"/img/buttons/start.png").build();
+PointerDetectorAdvFilter pointerDetectorAdvFilter = mediaPipeline
+				.newPointerDetectorAdvFilter(new WindowParam(5, 5, 50, 50))
+				.withWindow(start).build();
+</pre>
+
+==== GStreamerFilter ====
+
+This is a generic filter interface, that creates GStreamer filters in the media server.
+
+<pre>
+GStreamerFilter mirrorFilter = mediaPipeline.newGStreamerFilter("videoflip method=4")
+				.build();
+</pre>
+
+==== ChromaFilter ====
+
+This type of filter makes transparent a colour range in the top layer, revealing another image behind.
+
+<pre>
+ChromaFilter chromaFilter = mediaPipeline.newChromaFilter(
+				new WindowParam(100, 10, 500, 400)).build();
 </pre>
 
 == Programming with the Stream Oriented GE HTML5 SDK ==
@@ -754,15 +838,31 @@ npm update
 node_modules/.bin/grunt
 </pre>
 
-''Grunt'' will place into directory <code>dist</code> four different ''Javascript'' bundles adapted to browser usage. Take the one that better suits to your application needs and add it to your application project. 
+''Grunt'' will place into directory <code>dist</code> four different ''Javascript'' bundles adapted to browser usage. 
+
+If you are developing your application with maven, simply add the Kurento Content Management API for Web SDK library (<code>kws-content-api.js</code>) as a regular dependency:
+
+<pre>
+<dependencies>
+    ...
+    <dependency>
+        <groupId>com.kurento.kmf</groupId>
+        <artifactId>kws-content-api</artifactId>
+        <version>3.0.5</version>
+    </dependency>
+    ...
+</dependencies>
+</pre>
+
+This way, <code>kws-content-api.js</code> will be available in your web application root, as follows:
 
 <pre>
 <html>
      <head>
-	<script src=”js/kws-content-api.js”/>
+	 <script src=”./kws-content-api.js”/>
      </head>
      <body>
-	…
+	 …
      </body>
 </html>
 </pre>
@@ -863,7 +963,7 @@ The same ''content session'' events received in the ''service handler'' are also
 
 == Examples ==
 
-This section provides two examples of the ''Stream Oriented GE Kurento'' platform. Both examples implement a ''MediaPipeline'' composed by a ''PlayerEndPoint'' connected to a ''Filter'' and generating a media flow through an ''HttpEndpoint''. The main difference between these two example is the filter. The first example uses the ''JackVaderFilter''. This filter is an example of augmented reality element, since it  recognizes faces in media streams adding Jack Sparrow or Darth Vader hat onto these faces.The second example uses the ''ZBarFilter''. This filter is an example of computational vision element, since it recognize bar and QR codes in a media stream generating events with the information of the detected codes in the stream. Therefore, the ''MediaPipelines'' used in these examples are the following:
+This section provides two examples of the ''Stream Oriented GE Kurento'' platform. Both examples implement a ''MediaPipeline'' composed by a ''PlayerEndpoint'' connected to a ''Filter'' and generating a media flow through an ''HttpEndpoint''. The main difference between these two example is the filter. The first example uses the ''JackVaderFilter''. This filter is an example of augmented reality element, since it  recognizes faces in media streams adding Jack Sparrow or Darth Vader hat onto these faces.The second example uses the ''ZBarFilter''. This filter is an example of computational vision element, since it recognize bar and QR codes in a media stream generating events with the information of the detected codes in the stream. Therefore, the ''MediaPipelines'' used in these examples are the following:
 
 * ''PlayerEndpoint'' &rarr; ''JackVaderFilter'' &rarr; ''HttpEndpoint''
 * ''PlayerEndpoint'' &rarr; ''ZBarFilter'' &rarr; ''HttpEndpoint''
@@ -888,20 +988,20 @@ public class PlayerJsonJackVaderFilter extends HttpPlayerHandler {
 		//This makes the pipeline (and all its elements) to be released when the session terminates
 		session.releaseOnTerminate(mp);
 
-		//Create a PlayerEndPoint for injecting a video into the platform
-		PlayerEndPoint playerEndPoint = mp.newPlayerEndPoint(
+		//Create a PlayerEndpoint for injecting a video into the platform
+		PlayerEndpoint playerEndpoint = mp.newPlayerEndpoint(
 				"https://ci.kurento.com/video/fiwarecut.webm").build();
 
 		//Create a filter for augmenting the video stream in real time.
 		JackVaderFilter filter = mp.newJackVaderFilter().build();
 
 		//Connect both elements
-		playerEndPoint.connect(filter);
+		playerEndpoint.connect(filter);
 
 		//Store a player reference for later use
-		session.setAttribute("player", playerEndPoint);
+		session.setAttribute("player", playerEndpoint);
 
-		//Calling "start" creates the HttpEndPoint and connects it to the filter
+		//Calling "start" creates the HttpEndpoint and connects it to the filter
 		session.start(filter);
 	}
 
@@ -909,7 +1009,7 @@ public class PlayerJsonJackVaderFilter extends HttpPlayerHandler {
 	public void onContentStarted(HttpPlayerSession session) {
 		//Content starts when the client connects to the HttpEndpoin
 		//At that instant, the player must start reproducing the file
-		PlayerEndPoint playerendPoint = (PlayerEndPoint) session
+		PlayerEndpoint playerendPoint = (PlayerEndpoint) session
 				.getAttribute("player");
 		playerendPoint.play();
 	}
@@ -925,25 +1025,31 @@ In order to perform a request to this handler, we create a simple HTML page in w
 <head>
 <meta charset="utf-8">
 <title>Stream Oriented GE Kurento</title>
-<script src="./js/kws-content-api.js"></script>
+<script src="./kws-content-api.js"></script>
 <script>
-	function start() {
-		// Handlers are deployed in the localhost. The path for these handlers 
-		// is determined by the value of the HTML Select field "handler" 
-		var path = document.URL.substring(0, document.URL.lastIndexOf("/") + 1);
-		var handlerUrl = path + document.getElementById("handler").value;
+	var conn;
 
-		// KwsContentPlayer instantiation
-		var KwsContentPlayer = kwsContentApi.KwsContentPlayer;
+	function start() {
+		// Handler
+		var handler = document.getElementById("handler").value;
+
+		// Options
 		var options = {
 			remoteVideoTag: "remoteVideo"
 		};
-		var conn = new KwsContentPlayer(handlerUrl, options);
+
+		// KwsContentPlayer instantiation
+		var KwsContentPlayer = kwsContentApi.KwsContentPlayer;
+		conn = new KwsContentPlayer(handler, options);
 
 		// Media events log
 		conn.on("mediaevent", function(data) {
 			document.getElementById("events").value += JSON.stringify(data) + "\n";
 		});
+	}
+	
+	function stop() {
+		conn.terminate();
 	}
 </script>
 </head>
@@ -953,8 +1059,8 @@ In order to perform a request to this handler, we create a simple HTML page in w
 
 	<label for="selectFilter">Handler</label>
 	<select id="handler">
-		<option value="playerJsonJackVader">JackVaderFilter</option>
-		<option value="playerJsonZBar">ZBarFilter</option>
+		<option value="./playerJsonJackVader">JackVaderFilter</option>
+		<option value="./playerJsonZBar">ZBarFilter</option>
 	</select>
 	<br />
 
@@ -963,6 +1069,7 @@ In order to perform a request to this handler, we create a simple HTML page in w
 	<br />
 
 	<button id="start" onclick="start()">Start</button>
+	<button id="stop" onclick="stop()">Stop</button>
 	<br />
 
 	<video id="remoteVideo" autoplay></video>
@@ -974,7 +1081,7 @@ All in all, to run this example we have to make a request using a browser to hte
 
 ===ZBarFilter===
 
-The handler code (Java) for this example is shown below. This handler is deployed in the KAS at the path <code>http://myserver/myApp/playerJsonZBar</code>. The ''PlayerEndPoint'' uses an URL to locate a media stream (https://ci.kurento.com/video/barcodes.webm) and then ''ZBarFilter'' generates media events with the detected codes within the video.
+The handler code (Java) for this example is shown below. This handler is deployed in the KAS at the path <code>http://myserver/myApp/playerJsonZBar</code>. The ''PlayerEndpoint'' uses an URL to locate a media stream (https://ci.kurento.com/video/barcodes.webm) and then ''ZBarFilter'' generates media events with the detected codes within the video.
 
 <pre>
 @HttpPlayerService(path = "/playerJsonZBar")
@@ -985,7 +1092,7 @@ public class PlayerJsonZBarFilter extends HttpPlayerHandler {
 			throws Exception {
 		MediaPipelineFactory mpf = session.getMediaPipelineFactory();
 		MediaPipeline mp = mpf.create();
-		PlayerEndPoint player = mp.newPlayerEndPoint(
+		PlayerEndpoint player = mp.newPlayerEndpoint(
 				"https://ci.kurento.com/video/barcodes.webm").build();
 		session.setAttribute("player", player);
 		ZBarFilter zBarFilter = mp.newZBarFilter().build();
@@ -1004,7 +1111,7 @@ public class PlayerJsonZBarFilter extends HttpPlayerHandler {
 
 	@Override
 	public void onContentStarted(HttpPlayerSession session) {
-		PlayerEndPoint playerendPoint = (PlayerEndPoint) session
+		PlayerEndpoint playerendPoint = (PlayerEndpoint) session
 				.getAttribute("player");
 		playerendPoint.play();
 	}
@@ -1014,9 +1121,8 @@ public class PlayerJsonZBarFilter extends HttpPlayerHandler {
 
 To visualize the result of this handler, we use the same JavaScript code included in the previous example. This time, we select the ''ZBarFilter'' in the combo box and then press the ''Start'' button. As a result, the video containing QR codes is played (https://ci.kurento.com/video/barcodes.webm) and the detected codes by the filter are written in the HTML textarea with id ''events''.
 
-Both ''JackVaderFilter'' and ''ZBarFilter'' examples can be developed as a Maven project, and the resulting WAR is deployed in the KAS. An example of <code>pom.xml</code> for this Maven project in shown below. As can be seen, there are two dependencies of KMF: <code>kmf-content-api</code> (Java API) and <code>kws-content-api</code> (JavaScript API). The version for both dependencies is 1.0.0. On one hand, <code>kmf-content-api</code> is used as a regular Maven dependency. On the other hand, the JavaScript libraries contained in <code>kws-content-api</code> are unpacked in the root of the resulting WAR. Thus, the JavaScript API is available for web components (e.g. HTML pages) by including these libraries located in the <code>js</code> folder on the web root  (e.g. <code><script src="./js/kws-content-api.js"></script></code>).
+Both ''JackVaderFilter'' and ''ZBarFilter'' examples can be developed as a Maven project, and the resulting WAR is deployed in the KAS. An example of <code>pom.xml</code> for this Maven project in shown below.
 
-<pre>
 <pre>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -1034,12 +1140,11 @@ Both ''JackVaderFilter'' and ''ZBarFilter'' examples can be developed as a Maven
       <maven.compiler.target>1.6</maven.compiler.target>
 
       <!-- Kurento Dependencies Versions -->
-      <kmf-content-api.version>1.0.0</kmf-content-api.version>
-      <kws-content-api.version>1.0.0</kws-content-api.version>
+      <kmf-content-api.version>3.0.5</kmf-content-api.version>
+      <kws-content-api.version>3.0.5</kws-content-api.version>
 
       <!-- Plugins Versions -->
       <maven-war-plugin.version>2.3</maven-war-plugin.version>
-      <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
    </properties>
 
    <dependencies>
@@ -1047,6 +1152,11 @@ Both ''JackVaderFilter'' and ''ZBarFilter'' examples can be developed as a Maven
          <groupId>com.kurento.kmf</groupId>
          <artifactId>kmf-content-api</artifactId>
          <version>${kmf-content-api.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>com.kurento.kmf</groupId>
+         <artifactId>kws-content-api</artifactId>
+         <version>${kws-content-api.version}</version>
       </dependency>
    </dependencies>
 
@@ -1057,36 +1167,29 @@ Both ''JackVaderFilter'' and ''ZBarFilter'' examples can be developed as a Maven
             <artifactId>maven-war-plugin</artifactId>
             <version>${maven-war-plugin.version}</version>
          </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>${maven-dependency-plugin.version}</version>
-            <executions>
-               <execution>
-                  <id>copy-js-deps</id>
-                  <phase>generate-sources</phase>
-                  <goals>
-                     <goal>unpack</goal>
-                  </goals>
-                  <configuration>
-                     <artifactItems>
-                        <artifactItem>
-                           <groupId>com.kurento.kws</groupId>
-                           <artifactId>kws-content-api</artifactId>
-                           <version>${kws-content-api.version}</version>
-                           <type>jar</type>
-                           <overWrite>true</overWrite>
-                           <outputDirectory>${basedir}/target/${project.artifactId}-${project.version}</outputDirectory>
-                           <includes>**/*.*</includes>
-                        </artifactItem>
-                     </artifactItems>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
       </plugins>
    </build>
 
 </project>
 </pre>
+
+===kmf-content-demo===
+
+These examples and many others are available on [https://github.com/Kurento/kmf-content-demo GitHub]:
+
+<pre>
+git clone https://github.com/Kurento/kmf-content-demo.git
+</pre>
+
+The list of examples within <code>kmf-content-demo</code> is as follows:
+
+<ul>
+<li>HTTP Player</li>
+<li>HTTP Player with JSON-RPC protocol</li>
+<li>HTTP Recorder</li>
+<li>HTTP Recorder with JSON-RPC protocol</li>
+<li>WebRTC: Loopback, loopback with filters, one to many WebRTC</li>
+<li>Campus Party 2013 London demo (HTTP Player and RTP examples)</li>
+<li>Campus Party 2014 Brazil demo (computer vision example using WebRTC and different filters)</li>
+</ul>
 
