Typos in fi-ware versions
Change-Id: Ief8f03d04af5ebdfe3074b467e8acdf670467533

--- a/source/Developer_and_Programmer_Guide.mediawiki
+++ b/source/Developer_and_Programmer_Guide.mediawiki
@@ -416,7 +416,7 @@ public void onContentStarted(WebRtcContentSession contentSession) throws Excepti
 
 </pre>
 
-One important feature of the ''content session'' is its capability to share real time information with clients through a bidirectional channel. In order to interchange messages with a browser an  [http://forge.fi-ware.eu/plugins/mediawiki/wiki/fiware/index.php/StreamOriented_Open_API_Specification_(PRELIMINARY)''Open API''] client, like the one implemented by the HTML5 SDK, has to be used.  These messages follows a signaling protocol based on '''''JSON-RPC'''''. Messages can be interchanged between the ''service handler'' and the client while the ''content session'' is active. Method <code>publisEvent()</code> is used for this purpose. This capability is quite useful combined with  computer vision filter, as it allows sending events to clients coming from video content analysis (e.g. plate recognized, QR code detected, face detected, etc.)
+One important feature of the ''content session'' is its capability to share real time information with clients through a bidirectional channel. In order to interchange messages with a browser an  [http://forge.fi-ware.eu/plugins/mediawiki/wiki/fiware/index.php/StreamOriented_Open_API_Specification_(PRELIMINARY)''Open API''] client, like the one implemented by the HTML5 SDK, has to be used.  These messages follows a signaling protocol based on '''''JSON-RPC'''''. Messages can be interchanged between the ''service handler'' and the client while the ''content session'' is active. Method <code>publishEvent()</code> is used for this purpose. This capability is quite useful combined with  computer vision filter, as it allows sending events to clients coming from video content analysis (e.g. plate recognized, QR code detected, face detected, etc.)
 
 <pre>
 @Override
