Adapt Installation Guide to last fi-ware version
Change-Id: I7c148ff1f6698e088747c510d959c95e8394c7cb

--- a/source/Installation_Guide.mediawiki
+++ b/source/Installation_Guide.mediawiki
@@ -196,22 +196,6 @@ $ sudo update-rc.d jboss7 defaults
 
 == Kurento Media Server (KMS)==
 
-First, create the following file ''/etc/apt/sources.list.d/kurento.list'':
-
-<pre style="white-space: pre-wrap; 
-white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap;  
-word-wrap: break-word">
-$ sudo touch /etc/apt/sources.list.d/kurento.list 
-</pre>
-
-To use the ''Kurento'' repository add the line below to the recently created file:
-
-<pre style="white-space: pre-wrap; 
-white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap;  
-word-wrap: break-word">
-deb http://jmaster01-64.kurento.com/ stable/
-</pre>
-
 In order to add Personal Package Archive or PPA's repositories, the python-software-properties package must be installed:
 
 <pre style="white-space: pre-wrap; 
@@ -230,6 +214,18 @@ $ sudo apt-get update
 $ sudo apt-get upgrade
 $ sudo apt-get install libevent-dev kurento
 </pre>
+
+Finally, configure the server to run KMS when booted:
+
+<pre style="white-space: pre-wrap; 
+white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap;  
+word-wrap: break-word">
+$ sudo update-rc.d kurento defaults
+</pre>
+
+== Kurento Network Configuration==
+
+=== Running Kurento Without NAT configuration===
 
 KMS can receive requests from the Kurento Application Server (KAS) and from final users. The IP addresses and ports to receive these requests are configured in the configuration file ''/etc/kurento/kurento.conf''. After a fresh install that file looks like this:
 
@@ -254,12 +250,35 @@ serverPort=9091
 
 That configuration implies that only requests from the localhost are accepted. The section ''[Server]'' allows to configure the IP address and port where KMS will listen to KAS requests. The section ''[HttpEPServer]'' controls the IP address and port to listen to the final users.
 
-Finally, configure the server to run KMS when booted:
+=== Running Kurento With NAT configuration===
+
+[[File:Kurento_nat_deployment.png|center|]]
+
+This network diagram depicts a scenario where a NAT device is present. In this case, the client will access the public IP 130.206.82.56, which will connect him with the external intertface of the NAT device. KMS serves media on a specific address which, by default, is the IP of the server where the service is running. This would have the server announcing that the media served by an Http Endpoint can be consumed in the private IP 172.30.1.122. Since this address is not accessible by external clients, the administrator of the system will have to confgure KMS to announce, as connection addres for clients, the public IP of the NAT device. This is acheived by changing the value of announcedAddress in the filte /etc/kurento/kurento.conf with the appropriate value. The following lines would be the contents of this configuration file for the present scenario.
 
 <pre style="white-space: pre-wrap; 
 white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap;  
 word-wrap: break-word">
-$ sudo update-rc.d kurento defaults
+[Server]
+serverAddress=localhost
+serverPort=9090
+sdpPattern=pattern.sdp
+
+[HttpEPServer]
+#serverAddress=localhost
+
+# Announced IP Address may be helpful under situations such as the server needs
+# to provide URLs to clients whose host name is different from the one the
+# server is listening in. If this option is not provided, http server will try
+# to look for any available address in your system.
+announcedAddress=130.206.82.56
+
+serverPort=9091
+
+[WebRtcEndPoint]
+#stunServerAddress = xxx.xxx.xxx.xxx
+#stunServerPort = xx
+#pemCertificate = file
 </pre>
 
 == Sample application and videos==
